2016-09-26  Kugan Vivekanandarajah  <kuganv@linaro.org>

	PR middle-end/77719
	* tree-ssa-reassoc.c (make_new_ssa_for_def): Use gimple_get_lhs to get lhs
	instead of gimple_assign_lhs as stmt can be builtins too.

2016-09-26  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* tree.h (memmodel_from_int, memmodel_base, is_mm_relaxed,
	is_mm_consume, is_mm_acquire, is_mm_release, is_mm_acq_rel,
	is_mm_seq_cst, is_mm_sync): Move to ...
	* memmodel.h: This.  New file.
	* builtins.c: Include memmodel.h.
	* optabs.c: Likewise.
	* tsan.c: Likewise.
	* config/aarch64/aarch64.c: Likewise.
	* config/alpha/alpha.c: Likewise.
	* config/arm/arm.c: Likewise.
	* config/i386/i386.c: Likewise.
	* config/ia64/ia64.c: Likewise.
	* config/mips/mips.c: Likewise.
	* config/rs6000/rs6000.c: Likewise.
	* config/sparc/sparc.c: Likewise.
	* genconditions.c: Include memmodel.h in generated file.
	* genemit.c: Likewise.
	* genoutput.c: Likewise.
	* genpeep.c: Likewise.
	* genpreds.c: Likewise.
	* genrecog.c: Likewise.

2016-09-26  David Malcolm  <dmalcolm@redhat.com>

	* read-rtl.c (read_rtx_code): Rename local "i" to "idx", and use
	"c" instead when parsing characters.  Move operand parsing into...
	(read_rtx_operand): ...this new function, renaming "i" to "idx",
	and tightening the scope of various locals.

2016-09-26  LH Mouse  <lh_mouse@126.com>

	* config/i386/cygming.h (ASM_OUTPUT_DWARF_OFFSET): Fix typo.

2016-09-26  Marek Polacek  <polacek@redhat.com>

	* system.h: Use __has_attribute to check whether the fallthrough
	attribute is supported.

2016-09-26  Marek Polacek  <polacek@redhat.com>

	* ipa-inline-analysis.c (find_foldable_builtin_expect): Use
	gimple_call_internal_p.
	* ipa-split.c (find_return_bb): Likewise.
	(execute_split_functions): Likewise.
	* omp-low.c (dump_oacc_loop_part): Likewise.
	(oacc_loop_xform_head_tail): Likewise.
	* predict.c (predict_loops): Likewise.
	* sanopt.c (pass_sanopt::execute): Likewise.
	* tree-cfg.c (get_abnormal_succ_dispatcher): Likewise.