@@ -844,7 +844,7 @@ lvalue_required_p (Node_Id gnat_node, tree gnu_type, bool constant,
 		 && Ekind (Entity (gnat_temp)) == E_Enumeration_Literal))
 	  return 1;
 
-      /* ... fall through ... */
+      /* fall through */
 
     case N_Slice:
       /* Only the array expression can require an lvalue.  */
@@ -890,7 +890,7 @@ lvalue_required_p (Node_Id gnat_node, tree gnu_type, bool constant,
 	if (!constant)
 	  return 1;
 
-      /* ... fall through ... */
+      /* fall through */
 
     case N_Type_Conversion:
     case N_Qualified_Expression:
@@ -914,7 +914,7 @@ lvalue_required_p (Node_Id gnat_node, tree gnu_type, bool constant,
 				  get_unpadded_type (Etype (gnat_parent)),
 				  true, false, true);
 
-      /* ... fall through ... */
+      /* fall through */
 
     default:
       return 0;
@@ -1681,7 +1681,7 @@ Attribute_to_gnu (Node_Id gnat_node, tree *gnu_result_type_p, int attribute)
 	  break;
 	}
 
-      /* ... fall through ... */
+      /* fall through */
 
     case Attr_Access:
     case Attr_Unchecked_Access:
@@ -1938,7 +1938,7 @@ Attribute_to_gnu (Node_Id gnat_node, tree *gnu_result_type_p, int attribute)
 	  break;
 	}
 
-      /* ... fall through ... */
+      /* fall through */
 
     case Attr_Length:
       {
@@ -2393,7 +2393,7 @@ Attribute_to_gnu (Node_Id gnat_node, tree *gnu_result_type_p, int attribute)
       /* We treat Model as identical to Machine.  This is true for at least
 	 IEEE and some other nice floating-point systems.  */
 
-      /* ... fall through ... */
+      /* fall through */
 
     case Attr_Machine:
       /* The trick is to force the compiler to store the result in memory so
@@ -2537,7 +2537,7 @@ Case_Statement_to_gnu (Node_Id gnat_node)
 		  break;
 		}
 
-	      /* ... fall through ... */
+	      /* fall through */
 
 	    case N_Character_Literal:
 	    case N_Integer_Literal:
@@ -4007,7 +4007,7 @@ node_is_atomic (Node_Id gnat_node)
 	  && Has_Atomic_Components (Entity (Prefix (gnat_node))))
 	return true;
 
-      /* ... fall through ... */
+      /* fall through */
 
     case N_Explicit_Dereference:
       return Is_Atomic (Etype (gnat_node));
@@ -4123,7 +4123,7 @@ atomic_access_required_p (Node_Id gnat_node, bool *sync)
       /* Nothing to do if we are the prefix of an attribute, since we do not
 	 want an atomic access for things like 'Size.  */
 
-      /* ... fall through ... */
+      /* fall through */
 
     case N_Reference:
       /* The N_Reference node is like an attribute.  */
@@ -6580,7 +6580,7 @@ gnat_to_gnu (Node_Id gnat_node)
 	  break;
 	}
 
-      /* ... fall through ... */
+      /* fall through */
 
     case N_Op_Eq:
     case N_Op_Ne:
@@ -6747,7 +6747,7 @@ gnat_to_gnu (Node_Id gnat_node)
 	  break;
 	}
 
-      /* ... fall through ... */
+      /* fall through */
 
     case N_Op_Minus:
     case N_Op_Abs:
@@ -8344,7 +8344,7 @@ gnat_gimplify_expr (tree *expr_p, gimple_seq *pre_p,
 	    break;
 	  }
 
-      /* ... fall through ... */
+      /* fall through */
 
     default:
       return GS_UNHANDLED;
@@ -9867,7 +9867,7 @@ set_gnu_expr_location_from_node (tree node, Node_Id gnat_node)
       if (EXPR_P (TREE_OPERAND (node, 1)))
 	set_gnu_expr_location_from_node (TREE_OPERAND (node, 1), gnat_node);
 
-      /* ... fall through ... */
+      /* fall through */
 
     default:
       if (!REFERENCE_CLASS_P (node) && !EXPR_HAS_LOCATION (node))
