@@ -1,3 +1,11 @@
+2016-09-26  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* gcc-interface/decl.c: Fix fall through comment formatting.
+	* gcc-interface/misc.c: Likewise.
+	* gcc-interface/trans.c: Likewise.
+	* gcc-interface/utils.c: Likewise.
+	* gcc-interface/utils2.c: Likewise.
+
 2016-09-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc-interface/decl.c (gnat_to_gnu_entity): Use
